--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+OAUTH_AUTODESK_CLIENT_ID=42HiNgTdaypARVY98Q3y4TtNyGM84mZL
+OAUTH_AUTODESK_SECRET_KEY=rcKagi9IBEBmfsc9
+OAUTH_AUTODESK_CALLBACK_URL=http://f418-80-90-225-46.ngrok.io/callback
